# FlagGems

./: .gitignore  CMakeLists.txt  README.md  README_cn.md  pyproject.toml
.github/workflows/: coverage.yaml  cpp-op-test.yaml  daily.yaml  hugo-site.yaml  release.yaml  unittest.yaml
benchmark/: core_shapes.yaml  test_attention_backward.py  test_binary_pointwise_perf.py  test_blas_perf.py  test_reduction_perf.py  test_select_backward.py  test_special_perf.py  test_square_perf.py  test_tensor_constructor_perf.py  test_unary_pointwise_perf.py  test_vllm_perf.py
cmake/: BackendMUSA.cmake
conf/: operators.yaml
ctests/: CMakeLists.txt  test_triton_add.cpp  test_triton_addmm.cpp  test_triton_bmm.cpp  test_triton_div.cpp  test_triton_embedding.cpp  test_triton_fill.cpp  test_triton_mm.cpp  test_triton_rwkv_mm_sparsity.cpp
hugo-docs/: hugo.yaml
hugo-docs/assets/: _custom.scss
hugo-docs/data/: README.md  operators.yaml
hugo-docs/layouts/shortcodes/: coverage-data.html
include/flag_gems/: backend_utils.h  operators.h
lib/: CMakeLists.txt  accuracy_utils.cpp  copy.cpp  exponential_.cpp  fill.cpp  flash_attn_varlen_func.cpp  sort.cpp
lib/pointwise_dynamic_cpp/: CMakeLists.txt  pointwise_prepare_args.h  prebuild_kernels.py
src/flag_gems/: __init__.py
src/flag_gems/csrc/: CMakeLists.txt  aten_patch.cpp  cstub.cpp
src/flag_gems/experimental_ops/: select_backward.py
src/flag_gems/fused/: __init__.py  fused_moe.py  moe_align_block_size.py
src/flag_gems/ops/: __init__.py  _safe_softmax.py  absolute.py  div.py  flash_api.py  flash_attention_backward.py  flash_kernel.py  hypot.py  prelu.py  select_backward.py  sgn_.py  slice_backward.py  square.py  (+4 more)
tests/: conftest.py  test_asinh.py  test_attention_backward_ops.py  test_binary_pointwise_ops.py  test_blas_ops.py  test_dropout.py  test_general_reduction_ops.py  test_mm.py  test_reduction_ops.py  test_select_backward.py  test_special_ops.py  test_square_ops.py  test_tensor_constructor_ops.py  test_unary_pointwise_ops.py  test_upsample_linear1d_backward.py  test_vllm_ops.py
tests/test_DSA/: test_bin_topk.py  test_indexer_k_tiled.py
tools/: run_backend_tests.sh  run_backend_tests_ascend.sh  run_backend_tests_iluvatar.sh  run_backend_tests_moore.sh  run_backend_tests_nvidia.sh  run_backend_tests_tsingmicro.sh  run_tests.py  setup_nvidia.sh  test-op.sh  test_backends.sh
(+76 files in other folders)
